# LongNum

./: CMakeLists.txt  Makefile  README.md  longnum.cpp  longnum.h  main.cpp  picalculation.cpp  Тесты
include/: longnum.h
scr/: longnum.cpp  picalculation.cpp
test/: tests.cc  tests.cpp
